# legisdata

./: .env.docker.example  .env.example  .gitignore  .pnp.cjs  Caddyfile  Makefile  README.md  docker-compose.yml  manage.py  package.json  pyproject.toml
.github/workflows/: image-builder-dev.yml  image-builder-latest.yml
podman/backend/: Dockerfile
podman/backend-migrate/: migrate.sh
podman/frontend/: Dockerfile
podman/frontend/etc/caddy/: Caddyfile
podman/opensearch/usr/share/opensearch/config/: opensearch-dev.yml  opensearch-node.yml
scripts/: cert-generator.sh  migrate.sh
src/legisdata/: common.py  main.py  schema.py
src/legisdata/parser/: common.py  hansard.py  inquiry.py
src/legisweb/: asgi.py  settings.py  urls.py  wsgi.py
src/legisweb_frontend/: index.html
src/legisweb_frontend/src/: common.tsx  main.tsx  router.tsx  schema.tsx
src/legisweb_frontend/src/app/: store.tsx
src/legisweb_frontend/src/components/: avatar.tsx  copy-popup.tsx  snippet-control.tsx
src/legisweb_frontend/src/features/content-element/: content-element-slice.ts
src/legisweb_frontend/src/features/search/: query-slice.ts
src/legisweb_frontend/src/features/toast/: toast-slice.ts
src/legisweb_frontend/src/routes/: Root.css  hansard-list.tsx  hansard.tsx  inquiry-list.tsx  inquiry.tsx  root.tsx  search.tsx
src/legisweb_viewer/: apps.py  documents.py  models.py  serializers.py  urls.py  views.py
src/legisweb_viewer/management/commands/: import-legisdata.py
src/legisweb_viewer/migrations/: 0001_initial.py
