[tool.poetry]
name = "legisdata"
version = "0.1.0"
description = ""
authors = ["Jeffrey04 <mycyberpet@yahoo.com>"]
readme = "README.md"
packages = [{include = "legisdata", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
django-dotenv = "^1.4.2"
huey = "^2.5.0"
requests = "^2.31.0"
typer = "^0.12.3"
parsel = "^1.9.1"
structlog = "^24.1.0"
huggingface-hub = "^0.23.0"

[tool.poetry.scripts]
legisdata = 'legisdata.main:app'

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
