[tool.poetry]
name = "legisdata"
version = "0.1.0"
description = ""
authors = ["Jeffrey04 <mycyberpet@yahoo.com>"]
readme = "README.md"
packages = [{include = "legisdata", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = "^5.0.4"
django-dotenv = "^1.4.2"
huey = "^2.5.0"
requests = "^2.31.0"
typer = "^0.12.3"
parsel = "^1.9.1"
structlog = "^24.1.0"
huggingface-hub = "^0.23.0"
unstructured = {extras = ["pdf"], version = "^0.13.7"}
lxml = "^5.2.2"
djangorestframework = "^3.15.1"
adrf = "^0.1.6"
uvicorn = "^0.30.1"
typedload = "^2.33"

[tool.poetry.scripts]
legisdata = 'legisdata.main:app'

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
